Fixed page spacing.

--- a/style.css
+++ b/style.css
@@ -112,52 +112,49 @@ div form label{
 }
 
 #buildAmazing article {
-  border: 2px solid #eee;
-  border-radius: 20px;
-  box-sizing: border-box;
-  box-shadow: 2px 2px 10px 0 #eee;
   margin-top: 50px;
   margin-right: 5%;
   margin bottom: 0;
   margin left: 5%;
   padding: 20px;
   width: 40%;
-
+  transform: skew(9deg,0deg);
+  font-style: italic;
 }
 
 .hexagon {
   width: 125px;
+  margin: 50px 0 50px 0;
 }
 
 
 #bring {
+  height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+#bring heading {
+  background-color: rgba(255,204,53,.4);
+  font-style: italic;
+  margin: 12px 0 12px 0;
+}
+
 #bring article {
-  border: 2px solid #eee;
-  border-radius: 20px;
+  border: 2px solid white;
+  border-radius: 0;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 0;
   width: 40%;
 }
 .org-description {
+  height: 300px;
   font-size: 1.7em;
   text-align: left;
-  border: 2px solid #eee;
-  border-radius: 20px;
-  box-sizing: border-box;
-  box-shadow: 2px 2px 10px 0 #eee;
-  margin-top: 50px;
-  margin-right: 5%;
-  margin bottom: 0;
-  margin left: 5%;
   padding: 20px;
-  width: 40%;
-
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -167,6 +164,7 @@ div form label{
 }
 
 .org-description heading{
+  text-align: left;
   color: #ED1C24;
 }
 
@@ -177,6 +175,5 @@ div form label{
 .container {
   display: flex;
   flex-direction: column;
-  width: 200px;
   padding: 5px 15px 5px 15px;
 }
